I added a  paragraph about Mariana

--- a/Home_Page/index.html
+++ b/Home_Page/index.html
@@ -77,10 +77,10 @@
           <h3>Mariana</h3>
           <p class="role">Cohort E20</p>
           <p>
-            I'm on my way to being a full-stack developer, currently based in
+            " I'm on my way to being a full-stack developer, currently based in
             Nashville. I used to be an architectural drafter, but now I work
             with code. I'm passionate about CSS, website design, and graphics
-            programming.
+            programming."
           </p>
         </div>
       </div>
