fixing images on home page and linking to About_Mariana html via picture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Our Team Section</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="Home_Page/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
       <div class="team">
         <div class="team_member">
           <div class="team_img">
-            <img src="./Team_images/Demin.png" alt="Team_image" />
+            <img src="Home_Page/Team_images/Demin.png" alt="Team_image" />
           </div>
           <h3>Demin</h3>
           <p class="role">Cohort E20</p>
@@ -36,7 +36,7 @@
         </div>
         <div class="team_member">
           <div class="team_img">
-            <img src="./Team_images/Yogi.png" alt="Team_image" />
+            <img src="Home_Page/Team_images/Yogi.png" alt="Team_image" />
           </div>
           <h3>Yogi</h3>
           <p class="role">Cohort E20</p>
@@ -48,7 +48,7 @@
         </div>
         <div class="team_member">
           <div class="team_img">
-            <img src="./Team_images/Mitchell.png" alt="Team_image" />
+            <img src="Home_Page/Team_images/Mitchell.png" alt="Team_image" />
           </div>
           <h3>Mitchell</h3>
           <p class="role">Cohort E20</p>
@@ -60,7 +60,7 @@
         </div>
         <div class="team_member">
           <div class="team_img">
-            <img src="./Team_images/Danny.png" alt="Team_image" />
+            <img src="Home_Page/Team_images/Danny.png" alt="Team_image" />
           </div>
           <h3>Danny</h3>
           <p class="role">Cohort E20</p>
@@ -72,7 +72,8 @@
         </div>
         <div class="team_member">
           <div class="team_img">
-            <img src="./Team_images/Mariana.png" alt="Team_image" />
+            <a href="About_Mariana/index.html"> <img src="Home_Page/Team_images/Mariana.png" alt="Team_image" />
+            </a>
           </div>
           <h3>Mariana</h3>
           <p class="role">Cohort E20</p>
