--- a/About_Mariana/index.html
+++ b/About_Mariana/index.html
@@ -8,18 +8,24 @@
     <title>About Mariana</title>
   </head>
   <body>
+    <div class="border"></div>
     <section class="container">
-      <section class="aboutMe_1">
+      <section class="aboutMe , aboutMe_1">
         <img src="/Home_Page/Team_images/Mariana.png" alt="Team_image" />
-        <article>Portfolio</article>
-        <article>Skills</article>
-        <article>Resume</article>
-        <article>Contact</article>
+        <section class="list">
+          <hr class="hr" />
+          <ul class="list-1 list">
+            <li>Skills</li>
+            <li>Resume</li>
+            <li>Portfolio</li>
+            <li>Contact</li>
+          </ul>
+        </section>
       </section>
-      <section class="aboutMe_2">
-        <div class="container">About Me</div>
+      <section class="aboutMe aboutMe_2">
+        <!-- <div class="container">About Me</div> -->
         <h1>Hi, I'm Mariana Mena</h1>
-        <p>
+        <p class="greeting">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
           officiis. Adipisci officia illo molestiae at labore quas unde, laborum
           aspernatur maiores ea voluptatum voluptates quia repellendus, quos
@@ -27,9 +33,9 @@
         </p>
         <hr />
         <h2>Why Work With Me?</h2>
-        <ul>
-          <li>Result Driven</li>
+        <ul class="list">
           <li>Analytical</li>
+          <li>Result Driven</li>
           <li>Problem Solver</li>
           <li>Interpersonal Skills</li>
           <li>Deadline Conscious</li>
