adding my directory

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="team_member">
           <div class="team_img">
-            <img src="Home_Page/Team_images/Danny.png" alt="Team_image" />
+            <a href="About_Danny/index.html"><img src="Home_Page/Team_images/Danny.png" alt="Team_image" /></a>
           </div>
           <h3>Danny</h3>
           <p class="role">Cohort E20</p>
