--- a/About_Mariana/index.html
+++ b/About_Mariana/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="About_Mariana/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>About Mariana</title>
   </head>
   <body>
     <div class="border"></div>
     <section class="container">
       <section class="aboutMe , aboutMe_1">
-        <img src="/Home_Page/Team_images/Mariana.png" alt="Team_image" />
+        <img src="Mariana.png" alt="Team_image" />
         <section class="list">
           <hr class="hr" />
           <ul class="list-1 list">
