--- a/Home_Page/index.html
+++ b/Home_Page/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Our Team Section</title>
-    <link rel="stylesheet" href="Home_Page/index.css" />
+    <link rel="stylesheet" href="index.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,17 +15,22 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="border"></div>
-    <div class="wrapper">
-      <h1>Meet Our Team</h1>
-
-      <div class="team">
-        <div class="team_member">
-          <div class="team_img">
-            <img src="Home_Page/Team_images/Demin.png" alt="Team_image" />
-          </div>
+    <h1>Meet Our Team</h1>
+    <section class="container">
+      <section class="team">
+        <section class="team_member">
+          <img
+            class="team_img"
+            src="Home_Page/Team_images/Demin.png"
+            alt="Team_image"
+          />
           <h3>Demin</h3>
           <p class="role">Cohort E20</p>
           <p>
@@ -33,11 +39,13 @@
             nemo distinctio quam blanditiis dignissimos.
           </p>
           <div><i class="material-icons"></i></div>
-        </div>
-        <div class="team_member">
-          <div class="team_img">
-            <img src="Home_Page/Team_images/Yogi.png" alt="Team_image" />
-          </div>
+        </section>
+        <section class="team_member">
+          <img
+            class="team_img"
+            src="Home_Page/Team_images/Yogi.png"
+            alt="Team_image"
+          />
           <h3>Yogi</h3>
           <p class="role">Cohort E20</p>
           <p>
@@ -45,11 +53,13 @@
             tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
             nemo distinctio quam blanditiis dignissimos.
           </p>
-        </div>
-        <div class="team_member">
-          <div class="team_img">
-            <img src="Home_Page/Team_images/Mitchell.png" alt="Team_image" />
-          </div>
+        </section>
+        <section class="team_member">
+          <img
+            class="team_img"
+            src="Home_Page/Team_images/Mitchell.png"
+            alt="Team_image"
+          />
           <h3>Mitchell</h3>
           <p class="role">Cohort E20</p>
           <p>
@@ -57,11 +67,13 @@
             tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
             nemo distinctio quam blanditiis dignissimos.
           </p>
-        </div>
-        <div class="team_member">
-          <div class="team_img">
-            <a href="About_Danny/index.html"><img src="Home_Page/Team_images/Danny.png" alt="Team_image" /></a>
-          </div>
+        </section>
+        <section class="team_member">
+          <img
+            class="team_img"
+            src="./Team_images/Danny.png"
+            alt="Team_image"
+          />
           <h3>Danny</h3>
           <p class="role">Cohort E20</p>
           <p>
@@ -69,12 +81,15 @@
             tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
             nemo distinctio quam blanditiis dignissimos.
           </p>
-        </div>
-        <div class="team_member">
-          <div class="team_img">
-            <a href="About_Mariana/index.html"> <img src="Home_Page/Team_images/Mariana.png" alt="Team_image" />
-            </a>
-          </div>
+        </section>
+        <section class="team_member">
+          <a href="About_Mariana/index.html">
+            <img
+              class="team_img"
+              src="./Team_images/Mariana.png"
+              alt="Team_image"
+            />
+          </a>
           <h3>Mariana</h3>
           <p class="role">Cohort E20</p>
           <p>
@@ -83,8 +98,9 @@
             with code. I'm passionate about CSS, website design, and graphics
             programming."
           </p>
-        </div>
-      </div>
-    </div>
+          <i class="fas fa-cloud" style="font-size: 60px; color: lightblue"></i>
+        </section>
+      </section>
+    </section>
   </body>
 </html>
