Fix my Home_Page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Our Team Section</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/Home_Page/index.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -71,7 +71,7 @@
         <section class="team_member">
           <img
             class="team_img"
-            src="./Team_images/Danny.png"
+            src="Home_Page/Team_images/Danny.png"
             alt="Team_image"
           />
           <h3>Danny</h3>
@@ -83,10 +83,10 @@
           </p>
         </section>
         <section class="team_member">
-          <a href="About_Mariana/index.html">
+          <a href="About_Mariana\index.html">
             <img
               class="team_img"
-              src="./Team_images/Mariana.png"
+              src="Home_Page/Team_images/Mariana.png"
               alt="Team_image"
             />
           </a>
