--- a/index.html
+++ b/index.html
@@ -7,18 +7,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Palanquin:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="border"></div>
@@ -26,77 +17,42 @@
     <section class="container">
       <section class="team">
         <section class="team_member">
-          <img
-            class="team_img"
-            src="Home_Page/Team_images/Demin.png"
-            alt="Team_image"
-          />
+          <a href="/About_Demin/index.html"><img class="team_img" src="Home_Page/Team_images/Demin.png" alt="Team_image" /></a>
           <h3>Demin</h3>
           <p class="role">Cohort E20</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat
-            tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
-            nemo distinctio quam blanditiis dignissimos.
+            Hi! My name is Demin Zawity. I am currently a social worker, and I have been working in that field for three years. I am currently attending NSS to begin my career as a developer. My goal
+            is to eventually become a full stack developer.
           </p>
           <div><i class="material-icons"></i></div>
         </section>
         <section class="team_member">
-          <img
-            class="team_img"
-            src="Home_Page/Team_images/Yogi.png"
-            alt="Team_image"
-          />
+          <img class="team_img" src="Home_Page/Team_images/Yogi.png" alt="Team_image" />
           <h3>Yogi</h3>
           <p class="role">Cohort E20</p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat
-            tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
-            nemo distinctio quam blanditiis dignissimos.
-          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum nemo distinctio quam blanditiis dignissimos.</p>
         </section>
         <section class="team_member">
-          <img
-            class="team_img"
-            src="Home_Page/Team_images/Mitchell.png"
-            alt="Team_image"
-          />
+          <img class="team_img" src="Home_Page/Team_images/Mitchell.png" alt="Team_image" />
           <h3>Mitchell</h3>
           <p class="role">Cohort E20</p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat
-            tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
-            nemo distinctio quam blanditiis dignissimos.
-          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum nemo distinctio quam blanditiis dignissimos.</p>
         </section>
         <section class="team_member">
-          <img
-            class="team_img"
-            src="Home_Page/Team_images/Danny.png"
-            alt="Team_image"
-          />
+          <img class="team_img" src="Home_Page/Team_images/Danny.png" alt="Team_image" />
           <h3>Danny</h3>
           <p class="role">Cohort E20</p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat
-            tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
-            nemo distinctio quam blanditiis dignissimos.
-          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum nemo distinctio quam blanditiis dignissimos.</p>
         </section>
         <section class="team_member">
           <a href="About_Mariana\index.html">
-            <img
-              class="team_img"
-              src="Home_Page/Team_images/Mariana.png"
-              alt="Team_image"
-            />
+            <img class="team_img" src="Home_Page/Team_images/Mariana.png" alt="Team_image" />
           </a>
           <h3>Mariana</h3>
           <p class="role">Cohort E20</p>
           <p>
-            " I'm on my way to being a full-stack developer, currently based in
-            Nashville. I used to be an architectural drafter, but now I work
-            with code. I'm passionate about CSS, website design, and graphics
-            programming."
+            " I'm on my way to being a full-stack developer, currently based in Nashville. I used to be an architectural drafter, but now I work with code. I'm passionate about CSS, website design,
+            and graphics programming."
           </p>
           <i class="fas fa-cloud" style="font-size: 60px; color: lightblue"></i>
         </section>
