updating About_Danny

--- a/About_Danny/index.html
+++ b/About_Danny/index.html
@@ -1,3 +1,5 @@
+<!-- About_Me-Danny -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,14 +11,14 @@
 </head>
 <body>
     <section class="container">
-        <section class="aboutMe_1">
+        <section class="aboutMe aboutMe_1">
           <img src="/Home_Page/Team_images/Danny.png" alt="Picture of Danny" />
           <article>Portfolio</article>
           <article>Skills</article>
           <article>Resume</article>
           <article>Contact</article>
         </section>
-        <section class="aboutMe_2">
+        <section class="aboutMe aboutMe_2">
           <div class="container">About Me</div>
           <h1>Hi, I'm Danny Herrmann</h1>
           <p>
