added about me page

--- a/About_Yogi/index.html
+++ b/About_Yogi/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html<lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>About Yogi</title>
   </head>
+
   <body>
-    <section class="container">
-      section clas="aboutMe_1"
-      <article>portfolio<?<article></article>
-      <article>skills</article>
-      <article>Contact</article>
-    </section>
+    <div class="container">
+      <h1>About Me</h1>
+      <section class="aboutMe_1">
+      <img src="/Home_Page/Team_images/Yogi.png" alt="picture of Yogi"/>
+      </section>
+                <hr> 
+                <div class="list-items">
+            <ul>
+        <li>Portfolio</li>
+        <li>Skills</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+
     <section class="aboutme_2">
-      <hi>My name is Yogi</hi>
+      <hr />
       <p>
-        hello, I always like to study and learn new skills and subjects.I am
+        Hello, My name is Yogi. I always like to study and learn new skills and subjects.I am
         very excited to be part of this chort and very much proud of my
         team-mates and instructors.
       </p>
@@ -30,5 +40,10 @@
         <li>interpersonal skills</li>
       </ul>
     </section>
+
+  </div>
+
+   
+    
   </body>
 </html>
