modified index.css index.html

--- a/About_Mariana/index.html
+++ b/About_Mariana/index.html
@@ -25,7 +25,7 @@
       </section>
       <section class="aboutMe aboutMe_2">
         <!-- <div class="container">About Me</div> -->
-        <h1>Hi, I'm Mariana Mena</h1>
+        <h1 class="header">About Me</h1>Hi, I'm Mariana Mena</h1>
         <p class="greeting">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
           officiis. Adipisci officia illo molestiae at labore quas unde, laborum
