--- a/About_Demin/index.html
+++ b/About_Demin/index.html
@@ -4,36 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/About_Demin/main.css" />
     <title>About Demin</title>
+    <link rel="stylesheet" href="/About_Demin/main.css" />
   </head>
   <body>
-    <section class="container">
-      <section class="aboutMe aboutMe_1">
-        <img src="/Home_Page/Team_images/Demin.png" alt="Picture of Demin" />
-        <article>Portfolio</article>
-        <article>Skills</article>
-        <article>Resume</article>
-        <article>Contact</article>
+    <div class="main">
+      <div class="ProfilePic">
+        <img src="/About_Demin/Demin_Pics/Demin_Profile.jpeg" alt="Profile Pic" class="pic" />
+        <h1 class="Title">Demin Zawity</h1>
+      </div>
+      <section class="Education">
+        <div class="BoxHeader">
+          <h3 class="Header">Education and Work</h3>
+        </div>
+        <div class="BoxBody">
+          <div class="box">
+            <h4>Education</h4>
+            <p>
+              I have my bachelors degree from Middle Tennessee State University in psychology with a double minor in history and women and gender studies. I was involved in Muslim Inter-Scholastic
+              Tournament (MIST) as a competitor in high school and as a board member in college. I was also the treasurer of the history club and the secretary of Phi Alpha Theta Honors Society in
+              college. I also received a fulbright scholarship to relocate to Malaysia as an English Teaching Assistant (ETA) and cultural ambassador for 11 months. Unfortunately, I was unable to go
+              due to COVID.
+            </p>
+          </div>
+          <div class="box">
+            <h4>Work</h4>
+            <p>
+              My first job was at Tj Maxx as a sales consultant while I was in high school. Then I transitioned to a server position at Carrabbas to help pay for college, and I worked there full time
+              until I graduated. After graduation, I began working as a Family Service Worker at the Department of Children's Services to help foster youth reunite with their biological families. My
+              most recent position is Foster Parent Support with the Department of Children's Services where I support foster parents and help the department with recruitment.
+            </p>
+          </div>
+        </div>
       </section>
-      <section class="aboutMe aboutMe_2">
-        <div class="container">About Me</div>
-        <h1>Hi, I'm Demin Zawity</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, officiis. Adipisci officia illo molestiae at labore quas unde, laborum aspernatur maiores ea voluptatum voluptates quia
-          repellendus, quos debitis impedit laboriosam?
-        </p>
-        <hr />
-        <h2>Why Work With Me?</h2>
-        <ul>
-          <li>Result Driven</li>
-          <li>Analytical</li>
-          <li>Problem Solver</li>
-          <li>Interpersonal Skills</li>
-          <li>Deadline Conscious</li>
-          <li>Debugging knowledge</li>
-        </ul>
+      <section class="Children">
+        <div class="ChildHeader">
+          <h3 class="Header">My Children</h3>
+        </div>
+        <div class="SectionBody">
+          <div class="section">
+            <img src="/About_Demin/Demin_Pics/Suzie.jpeg" alt="Suzie" class="image suzie" />
+            <h4>Suzie</h4>
+            <p>
+              This is Suzie. She was the first Valentines present I ever got for my boyfriend. She is very sweet, cuddly, clever, and runs my home. She becomes extra affectionate when she wants me to
+              feed her. If she is upset with me, she will treat my office and clean laundry as her personal kitty litter.
+            </p>
+          </div>
+          <div class="section">
+            <img src="/About_Demin/Demin_Pics/Theo.jpeg" alt="Theo" class="image theo" />
+            <h4>Theo</h4>
+            <p>
+              This is Theo. He is the sweetest cat I have ever had. He loves to cuddle next to me when I sleep, and he often chirps instead of meowing. He had to spend six weeks in a cage to heal due
+              to a broken leg. He loves to suckle on your finger and his paws for comfort before falling asleep. Theo also loves falling at your feet and showing his big belly.
+            </p>
+          </div>
+          <div class="section">
+            <img src="/About_Demin/Demin_Pics/Jasper.jpeg" alt="Jasper" class="image jasper" />
+            <h4>Jasper</h4>
+            <p>
+              This is Jasper, better known as my trouble child. He likes to sing the song of his people at the top of his lungs all day and night, especially when I am in class. He loves the sound of
+              running water but hates bath time. He get upset when he does not get enough attention, but also hates to be cuddles.
+            </p>
+          </div>
+          <div class="section">
+            <img src="/About_Demin/Demin_Pics/Cats.jpeg" alt="Cats" class="image cats" />
+            <h4>Big Babies</h4>
+            <p>This is live proof of what they do to me during class and how they run my home. Pushing them off me does not help, because they continue to jump on me and remain there for hours.</p>
+          </div>
+        </div>
       </section>
-    </section>
+      <footer>Please click <a href="index.html" style="color: rgb(219, 222, 219)">here</a> to return back to the home page and learn more about my wonderful team!</footer>
+    </div>
   </body>
 </html>
