--- a/About_Mariana/index.html
+++ b/About_Mariana/index.html
@@ -5,8 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="About_Mariana/index.css" />
     <title>About Mariana</title>
+    <!-- icon in tab -->
+    <link rel="shortcut icon" href="/About_Mariana/Team_Logo.jpg" type="x-icon"  /> 
+<!-- font_awesome_link -->
+<script src="https://kit.fontawesome.com/002995de96.js" crossorigin="anonymous"></script>
+<!-- icon_Iconify_link -->
+<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </head>
   <body>
     <div class="border"></div>
@@ -16,16 +23,17 @@
         <section class="list">
           <hr class="hr" />
           <ul class="list-1 list">
-            <li>Skills</li>
-            <li>Resume</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+            <li class="Skills button">Skills</li>
+            <li class="Resume button">Resume</li>
+            <li class="Portfolio button">Portfolio</li>
+            <li class="Contact button">Contact</li>
           </ul>
         </section>
       </section>
       <section class="aboutMe aboutMe_2">
         <!-- <div class="container">About Me</div> -->
-        <h1 class="header">About Me</h1>Hi, I'm Mariana Mena</h1>
+        <h1 class="header">About Me</h1>
+        <h2> Hi, I'm Mariana Mena</h2>
         <p class="greeting">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
           officiis. Adipisci officia illo molestiae at labore quas unde, laborum
@@ -42,6 +50,13 @@
           <li>Deadline Conscious</li>
           <li>Debugging knowledge</li>
         </ul>
+        <section class="icons">
+        <i class="iconify fa-2x icon" data-icon="akar-icons:facebook-fill" style="color: #d77818; margin: 10px;"></i>
+        <i class="iconify fa-2x icon" data-icon="fa-brands:instagram" style="color: #d77818; margin: 10px;"></i>
+        <i class="iconify fa-2x icon" data-icon="fa6-brands:linkedin" style="color: #d77818; margin: 10px;"></i>
+        <i class="iconify fa-2x icon" data-icon="fontisto:email" style="color: #d77818; margin: 10px;"></i>
+        <i class="iconify fa-2x icon" data-icon="fa:github" style="color: #d77818; margin: 10px;" ></i>
+      </section>
       </section>
     </section>
   </body>
