added about me for Mitchell

--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
           <h3>Mitchell</h3>
           <p class="role">Cohort E20</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat
-            tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum
-            nemo distinctio quam blanditiis dignissimos.
+            Hello! My name is Mitchell Shelton. I've been happily married to my wife for two years and together we have a beautiful 5 month old son. I look forward to starting my career as a software developer!
           </p>
         </div>
         <div class="team_member">
           <div class="team_img">
-            <img src="Home_Page/Team_images/Danny.png" alt="Team_image" />
+            <a href="About_Danny/index.html"><img src="Home_Page/Team_images/Danny.png" alt="Team_image" /></a>
           </div>
           <h3>Danny</h3>
           <p class="role">Cohort E20</p>
