Making these web pages ugly

--- a/About_Demin/index.html
+++ b/About_Demin/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="main">
       <div class="ProfilePic">
-        <img src="/About_Demin/Demin_Pics/Demin_Profile.jpeg" alt="Profile Pic" class="pic" />
+        <a href="/About_Demin/About_Demin_Two/index.html"><img src="/About_Demin/Demin_Pics/Demin_Profile.jpeg" alt="Profile Pic" class="pic" /></a>
         <h1 class="Title">Demin Zawity</h1>
       </div>
       <section class="Education">
@@ -73,7 +73,9 @@
           </div>
         </div>
       </section>
-      <footer>Please click <a href="index.html" style="color: rgb(219, 222, 219)">here</a> to return back to the home page and learn more about my wonderful team!</footer>
+      <footer>
+        <p>Please click <a href="index.html" style="color: rgb(219, 222, 219)">here</a> to return back to the home page and learn more about my wonderful team!</p>
+      </footer>
     </div>
   </body>
 </html>
