--- a/About_Mariana/About_Mariana_Messy/index_Messy.html
+++ b/About_Mariana/About_Mariana_Messy/index_Messy.html
@@ -1,4 +1,4 @@
-<!-- About_Me_Mariana -->
+<!-- About_Me_Mariana_Messy -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="About_Mariana/index.css" />
+    <link rel="stylesheet" href="/About_Mariana/About_Mariana_Messy/index_Messy.css" />
     <title>About Mariana</title>
     <!-- icon in tab -->
     <link rel="shortcut icon" href="/About_Mariana/Team_Logo.jpg" type="x-icon"  /> 
