--- a/About_Mariana/index.html
+++ b/About_Mariana/index.html
@@ -57,8 +57,9 @@
         <i class="iconify fa-2x icon" data-icon="fontisto:email" style="color: #d77818; margin: 10px;"></i>
         <i class="iconify fa-2x icon" data-icon="fa:github" style="color: #d77818; margin: 10px;" ></i>
       </section>
+      
+      <a href="/About_Mariana/About_Mariana_Messy/index_Messy.html"><button class="messy "> Yin & Yang Part 2 </button></a>
       </section>
     </section>
-    
   </body>
 </html>
