updating About_Danny

--- a/About_Danny/index.html
+++ b/About_Danny/index.html
@@ -1,43 +1,79 @@
-<!-- About_Me-Danny -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/About_Danny/main.css">
     <title>About Danny</title>
+    <link rel="stylesheet" href="/About_Danny/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <section class="container">
-        <section class="aboutMe aboutMe_1">
-          <img src="/Home_Page/Team_images/Danny.png" alt="Picture of Danny" />
-          <article>Portfolio</article>
-          <article>Skills</article>
-          <article>Resume</article>
-          <article>Contact</article>
-        </section>
-        <section class="aboutMe aboutMe_2">
-          <div class="container">About Me</div>
-          <h1>Hi, I'm Danny Herrmann</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-            officiis. Adipisci officia illo molestiae at labore quas unde, laborum
-            aspernatur maiores ea voluptatum voluptates quia repellendus, quos
-            debitis impedit laboriosam?
-          </p>
-          <hr />
-          <h2>Why Work With Me?</h2>
-          <ul>
-            <li>Result Driven</li>
-            <li>Analytical</li>
-            <li>Problem Solver</li>
-            <li>Interpersonal Skills</li>
-            <li>Deadline Conscious</li>
-            <li>Debugging knowledge</li>
-          </ul>
-        </section>
-      </section>
+
+    <div class="container">
+
+        <div class="box">
+
+            <img class="profile-image" src="About_Danny/images/prof_pic.jpeg" class="flex-item">
+            <h1 class="name">Danny Herrmann</h1>
+            <a href="https://github.com/dannyherrmann" target="_blank"><img class="icon" src="About_Danny/images/github.png"></a>
+            <a href="https://www.linkedin.com/in/danny-herrmann-69753336/" target="_blank"><img class="icon" src="About_Danny/images/linkedin.png"></a>
+            <a href="https://www.instagram.com/dannyherrmann/" target="_blank"><img class="icon" src="About_Danny/images/Instagram-Icon.png"></a>
+            <a href="mailto:dannyherrmann91@gmail.com"><img class="icon" src="About_Danny/images/mail.png"></a>
+
+        </div>
+
+        <div class="right">
+
+        <div class="box2">
+
+            <!-- <div class="wrapper">
+                <div class="wrapper-container">
+                    <div class="ribbon-1 ribbon"></div>
+                </div>
+            </div> -->
+            
+            <div class="wrapper">
+            <div class="box wrapper-container">
+
+            <div class="ribbon-1 ribbon"><h3 class="ribbon-text">About Me</h3></div>
+            <div class="area">
+            <h4>Yo! I'm Danny.</h4>
+            <p>I grew up in a western suburb of Chicago called Hinsdale, IL. Moved to Nashville in 2010 to attend Belmont University. 
+                After graduating from Belmont in 2014 with a bachelors in business administration / management - I worked at Nissan in their Digital HR department supporting Workday. Met my amazing wife at Belmont. We got married in 2019, and had our first son Cal in May of 2021.</p>
+            </div>
+
+            </div>
+            </div>
+
+
+        </div>
+
+        <div class="wrapper">
+            <div class="box wrapper-container">
+
+            <div class="ribbon-2 ribbon"><h3 class="ribbon-text">Hobbies</h3></div>
+            <div class="area">
+            <ul>
+                <li>DJing</li>
+                <li>Working on computers</li>
+            </ul>
+            </div>
+
+            </div>
+            </div>
+
+
+        <!-- <div class="box box3">
+
+            <h1>TEST</h1>
+
+        </div> -->
+        </div>
+    </div>
+
 </body>
 </html>
