--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <nav class="NavBar">
+      <ul class="nav-links">
+        <li><a class="active" href="/About_Demin/index.html">Demin</a></li>
+        <li><a class="active" href="/About_Yogi/index.html">Yogi</a></li>
+        <li><a class="active" href="/About_Mitchell/index.html">Mitchell</a></li>
+        <li><a class="active" href="/About_Danny/index.html">Danny</a></li>
+        <li><a class="active" href="/About_Mariana/index.html">Mariana</a></li>
+      </ul>
+    </nav>
     <div class="border"></div>
     <h1>Meet Our Team</h1>
     <section class="container">
