Mitchell index.html added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <a href="https://github.com/chyogi" target="_blank"><i class="fas fa-cloud" style="font-size: 60px; color: rgba(78, 116, 113, 0.699); text-shadow: 3px 3px rgba(78, 116, 113, 0.272)"></i></a>
         </section>
         <section class="team_member">
-          <img class="team_img" src="Home_Page/Team_images/Mitchell.png" alt="Team_image" />
+          <a href="About_Mitchell/index.html">
+            <img class="team_img" src="Home_Page/Team_images/Mitchell.png" alt="Team_image" /></a>
           <h3>Mitchell</h3>
           <p class="role">Cohort E20</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quaerat tempora, voluptatum quas facere dolorum aut cumque nihil nulla harum nemo distinctio quam blanditiis dignissimos.</p>
