adding the nav bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="NavBar">
-      <ul class="nav-links">
+      <ul class="NavLinks">
         <li><a class="active" href="/About_Demin/index.html">Demin</a></li>
         <li><a class="active" href="/About_Yogi/index.html">Yogi</a></li>
         <li><a class="active" href="/About_Mitchell/index.html">Mitchell</a></li>
@@ -21,6 +21,7 @@
         <li><a class="active" href="/About_Mariana/index.html">Mariana</a></li>
       </ul>
     </nav>
+
     <div class="border"></div>
     <h1>Meet Our Team</h1>
     <section class="container">
