--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>Our Team Section</title>
     <link rel="stylesheet" href="/Home_Page/index.css" />
-
+    <!-- icon_Iconify_link -->
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,12 +26,21 @@
       <ul class="nav-links">
         <li><a class="active" href="/About_Demin/index.html">Demin</a></li>
         <li><a class="active" href="/About_Yogi/index.html">Yogi</a></li>
-        <li><a class="active" href="/About_Mitchell/index.html">Mitchell</a></li>
+        <li>
+          <a class="active" href="/About_Mitchell/index.html">Mitchell</a>
+        </li>
         <li><a class="active" href="/About_Danny/index.html">Danny</a></li>
         <li><a class="active" href="/About_Mariana/index.html">Mariana</a></li>
       </ul>
     </nav>
     <div class="border"></div>
+    <a href="https://nashvillesoftwareschool.com/">
+    <div class="nss_logo"></a>
+      <img
+        src="/Home_Page/Team_images/NSS-logo-horizontal-small.jpg"
+        alt="NSS logo"
+      />
+    </div>
     <h1>Meet Our Team</h1>
     <section class="container">
       <section class="team">
@@ -161,5 +171,47 @@
         </section>
       </section>
     </section>
+    <footer class="footer">
+      <section class="icons">
+        <a href="https://www.facebook.com/NashvilleSoftwareSchool">
+          <i
+            class="iconify fa-3x icon"
+            data-icon="fa:facebook-square"
+            style="color: #d77818; margin: 10px"
+          ></i
+        ></a>
+        <a href="https://www.linkedin.com/school/nashville-software-school/">
+          <i
+            class="iconify fa-3x icon"
+            data-icon="fa6-brands:linkedin"
+            style="color: #d77818; margin: 10px"
+          ></i
+        ></a>
+        <a href="https://twitter.com/nashsoftware">
+          <i
+            class="iconify fa-3x icon"
+            data-icon="fa-brands:twitter-square"
+            style="color: #d77818; margin: 10px"
+          ></i
+        ></a>
+        <a href="https://github.com/nashville-software-school" target="_blank"
+          ><i
+            class="iconify fa-3x icon"
+            data-icon="fa6-brands:github-square"
+            style="color: #d77818; margin: 10px"
+          ></i
+        ></a>
+        <a
+          href="https://www.instagram.com/NashvilleSoftwareSchool/"
+          target="_blank"
+          ><i
+            class="iconify fa-3x icon"
+            data-icon="icomoon-free:instagram"
+            style="color: #d77818; margin: 10px"
+          ></i
+        ></a>
+        <p>&copy; 2022 *BIT_BY_BIT* NSS.com</p>
+      </section>
+    </footer>
   </body>
 </html>
