Style Home Page

--- a/About_Mariana/index.html
+++ b/About_Mariana/index.html
@@ -5,15 +5,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="About_Mariana/index.css" />
     <title>About Mariana</title>
     <!-- icon in tab -->
-    <link rel="shortcut icon" href="/About_Mariana/Team_Logo.jpg" type="x-icon"  /> 
-<!-- font_awesome_link -->
-<script src="https://kit.fontawesome.com/002995de96.js" crossorigin="anonymous"></script>
-<!-- icon_Iconify_link -->
-<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+    <link
+      rel="shortcut icon"
+      href="/Home_Page/Team_images/Page_Logo.png"
+      type="x-icon"
+    />
+    <!-- font_awesome_link -->
+    <script
+      src="https://kit.fontawesome.com/002995de96.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- icon_Iconify_link -->
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </head>
   <body>
     <div class="border"></div>
@@ -33,7 +43,7 @@
       <section class="aboutMe aboutMe_2">
         <!-- <div class="container">About Me</div> -->
         <h1 class="header">About Me</h1>
-        <h2> Hi, I'm Mariana Mena</h2>
+        <h2>Hi, I'm Mariana Mena</h2>
         <p class="greeting">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
           officiis. Adipisci officia illo molestiae at labore quas unde, laborum
@@ -51,14 +61,36 @@
           <li>Debugging knowledge</li>
         </ul>
         <section class="icons">
-        <i class="iconify fa-2x icon" data-icon="akar-icons:facebook-fill" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fa-brands:instagram" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fa6-brands:linkedin" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fontisto:email" style="color: #d77818; margin: 10px;"></i>
-        <i class="iconify fa-2x icon" data-icon="fa:github" style="color: #d77818; margin: 10px;" ></i>
-      </section>
-      
-      <a href="/About_Mariana/About_Mariana_Messy/index_Messy.html"><button class="messy "> Yin & Yang Part 2 </button></a>
+          <i
+            class="iconify fa-2x icon"
+            data-icon="akar-icons:facebook-fill"
+            style="color: #d77818; margin: 10px"
+          ></i>
+          <i
+            class="iconify fa-2x icon"
+            data-icon="fa-brands:instagram"
+            style="color: #d77818; margin: 10px"
+          ></i>
+          <i
+            class="iconify fa-2x icon"
+            data-icon="fa6-brands:linkedin"
+            style="color: #d77818; margin: 10px"
+          ></i>
+          <i
+            class="iconify fa-2x icon"
+            data-icon="fontisto:email"
+            style="color: #d77818; margin: 10px"
+          ></i>
+          <i
+            class="iconify fa-2x icon"
+            data-icon="fa:github"
+            style="color: #d77818; margin: 10px"
+          ></i>
+        </section>
+
+        <a href="/About_Mariana/About_Mariana_Messy/index_Messy.html"
+          ><button class="messy">Yin & Yang Part 2</button></a
+        >
       </section>
     </section>
   </body>
