--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Our Team Section</title>
+    <!-- icon in tab -->
+    <link
+      rel="shortcut icon"
+      href="/Home_Page/Team_images/Page_Logo.png"
+      type="x-icon"
+    />
     <link rel="stylesheet" href="/Home_Page/index.css" />
     <!-- icon_Iconify_link -->
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
@@ -34,15 +40,38 @@
       </ul>
     </nav>
 
-    <div class="border"></div>
     <a href="https://nashvillesoftwareschool.com/">
-    <div class="nss_logo"></a>
-      <img
-        src="/Home_Page/Team_images/NSS-logo-horizontal-small.jpg"
-        alt="NSS logo"
-      />
+      <div class="nss_logo">
+        <img
+          src="/Home_Page/Team_images/NSS-logo-horizontal-small.jpg"
+          alt="NSS logo"
+        /></div
+    ></a>
+    <div class="instructors_role">
+      <p>E20-Instructors</p>
+    </div>
+    <div class="instructors">
+      <a href="https://www.linkedin.com/in/lynnsamuelson/">
+        <img
+          class="instructor_img"
+          src="/Home_Page/Team_images/Lynn Samuelson.png"
+          alt="Lynn Samuelson"
+      /></a>
+      <a href="https://www.linkedin.com/in/sydneycnoh/">
+        <img
+          class="instructor_img"
+          src="/Home_Page/Team_images/Sydney Noh.png"
+          alt="Sydney Noh.pn"
+      /></a>
+      <a href="https://www.linkedin.com/in/trevor-guinn-aba48274/">
+        <img
+          class="instructor_img"
+          src="/Home_Page/Team_images/Trevor Guinn.png"
+          alt="Trevor Guinn"
+      /></a>
     </div>
     <h1>Meet Our Team</h1>
+    <div class="border"></div>
     <section class="container">
       <section class="team">
         <section class="team_member">
