--- a/index.html
+++ b/index.html
@@ -51,19 +51,18 @@
       <p>E20-Instructors</p>
     </div>
     <div class="instructors">
-      <a href="https://www.linkedin.com/in/lynnsamuelson/">
+     </a>
+      <a href="https://www.linkedin.com/in/sydneycnoh/">
+        <img
+          src="/Home_Page/Team_images/Sydney Noh.png"
+          class="instructor_img"
+          alt="Sydney Noh.pn"
+      /><a href="https://www.linkedin.com/in/lynnsamuelson/">
         <img
           class="instructor_img"
           src="/Home_Page/Team_images/Lynn Samuelson.png"
           alt="Lynn Samuelson"
-      /></a>
-      <a href="https://www.linkedin.com/in/sydneycnoh/">
-        <img
-          class="instructor_img"
-          src="/Home_Page/Team_images/Sydney Noh.png"
-          alt="Sydney Noh.pn"
-      /></a>
-      <a href="https://www.linkedin.com/in/trevor-guinn-aba48274/">
+      /><a href="https://www.linkedin.com/in/trevor-guinn-aba48274/">
         <img
           class="instructor_img"
           src="/Home_Page/Team_images/Trevor Guinn.png"
