--- a/About_Mitchell/About_Mitchell_Messy/index.html
+++ b/About_Mitchell/About_Mitchell_Messy/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Mitchell</title>
-  <link rel="stylesheet" href="About_Mitchell/main.css">
+  <link rel="stylesheet" href="About_Mitchell_Messy/main.css">
   <script src="https://kit.fontawesome.com/476d17bef2.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
     <div class="aboutMe">
-    <a href="About_Mitchell/About_Mitchell_Messy"><img src="Home_Page/Team_images/Mitchell.png" alt="team image"></a>
+    <img src="Home_Page/Team_images/Mitchell.png" alt="team image">
     <hr>
     <h1>Mitchell Shelton</h1>
     <hr>
@@ -35,5 +35,6 @@
     <a href="faceboook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a>
   </div>
 </div>
+<p>Click <a href="returnHome">here</a> to return to the home page</p>
 </body>
 </html>
